<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eapli</groupId>
    <artifactId>base</artifactId>
    <version>1.4.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
		<eapli.framework.core.version>v21.2.0-RELEASE</eapli.framework.core.version>
		<eapli.framework.authz.version>v21.2.0-RELEASE</eapli.framework.authz.version>
		<eapli.framework.pubsub.version>v21.2.0-RELEASE</eapli.framework.pubsub.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <java.version>11</java.version>
    </properties>

    <modules>
        <!--Eapli-base-->
        <module>base.app.manager.console</module>
        <module>base.app.student.console</module>
        <module>base.app.teacher.console</module>
        <module>base.app.common.console</module>
        <module>base.app.bootstrap</module>
        <module>base.bootstrappers</module>
        <module>base.core</module>
        <module>base.persistence.impl</module>
        <!-- CI builds only -->
        <module>ecourse.util.ci</module>
        <module>jovami.exam</module>
    </modules>

    <dependencies>
		<dependency>
			<groupId>org.bitbucket.pag_isep.eapliframework</groupId>
			<artifactId>eapli.framework.core</artifactId>
			<version>${eapli.framework.core.version}</version>
		</dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>4.11.1</version>
        </dependency>
		<dependency>
			<groupId>org.bitbucket.pag_isep.eapliframework</groupId>
			<artifactId>eapli.framework.infrastructure.authz</artifactId>
			<version>${eapli.framework.authz.version}</version>
		</dependency>
		<dependency>
			<groupId>org.bitbucket.pag_isep.eapliframework</groupId>
			<artifactId>eapli.framework.infrastructure.pubsub</artifactId>
			<version>${eapli.framework.pubsub.version}</version>
		</dependency>

		<!-- keep junit4 for now -->
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>
		<!-- support junit5 -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>1.4.200</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <!--Necessary to avoid drop-and-create failure with latest spring boot version-->
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>5.4.14.Final</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <testFailureIgnore>true</testFailureIgnore>
                    <aggregate>true</aggregate>
                </configuration>
                <executions>
                    <execution>
                        <phase>install</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.6</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.10.0</version>
            </plugin>
        </plugins>
    </build>
</project>
